--- a/index.html
+++ b/index.html
@@ -6,9 +6,161 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>POKeDEX</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
+<body style="background-image: url('img/background.png');
+background-repeat: no-repeat;
+background-attachment: fixed;
+  background-size: 100% 100%;">
+  <div class="grid place-items-center h-screen">
+    <svg height="275" width="400" class="object-top">
+
+      <polygon points="0,0 0,50 85,50 115,25 200,25 200,0" style="fill:red;stroke:brown;stroke-width:1;" />
+      <g>
+        <circle cx="35" cy="25" r="15" stroke="white" stroke-width="4" fill="cyan" />
+        <circle cx="36" cy="26" r="12" fill="cadetblue" />
+        <circle cx="30" cy="20" r="5" fill="cyan" />
+        <circle cx="30" cy="20" r="2" fill="white" />
+      </g>
+      <g>
+        <circle cx="68" cy="10" r="3" style="fill:red;stroke:brown;stroke-width:1" />
+        <circle cx="80" cy="10" r="3" style="fill:yellow;stroke:brown;stroke-width:1" />
+        <circle cx="92" cy="10" r="3" style="fill:green;stroke:brown;stroke-width:1" />
+      </g>
+
+      <polygon points="0,50 85,50 115,25 175,25 175,275 0,275 " style="fill:red;stroke:brown;stroke-width:1;" />
+      <polygon points="5,55 88,55 118,30 170,30 170,270 5,270 " style="fill:red;stroke:brown;stroke-width:1;" />
+
+      <polygon points="375,275 375,50 290,50 260,25 200,25 200,275" style="fill:red;stroke:brown;stroke-width:1;" />
+      <polygon points="370,270 370,55 288,55 258,30 205,30 205,270" style="fill:red;stroke:brown;stroke-width:1;" />
+
+      <polygon points="175,275 200,275 200,25 175,25" style="fill:red;stroke:brown;stroke-width:1;" />
+      <polygon points="175,240 200,240 200,255 175,255" style="fill:red;stroke:brown;stroke-width:1;" />
+      <polygon points="175,40 200,40 200,55 175,55" style="fill:red;stroke:brown;stroke-width:1;" />
+
+      <circle cx="50" cy="170" r="25" stroke="brown" stroke-width="1" fill="white" />
+      <polygon points="25,75 25,170 50,195 155,195 155,75" style="fill:white;stroke:brown ;stroke-width:1;" />
+      <circle cx="50" cy="170" r="24" stroke="white" stroke-width="1" fill="white" />
+
+      <rect x="44" y="94" width="92" height="82" style="fill:blue;stroke:black;stroke-width:2;fill-rule:evenodd;" />
+      <image x="45" y="95" width="90" height="80" xlink:href="#" />
+
+      <rect x="80" y="82" width="4" height="4" style="fill:brown;" />
+      <rect x="100" y="82" width="4" height="4" style="fill:brown;" />
+      <svg x="125" y="180">
+        <svg x="0" y="0">
+          <g fill="black">
+            <circle cx="1" cy="1" r="1" />
+            <rect x="1" y="0" width="10" height="2" />
+            <circle cx="11" cy="1" r="1" />
+          </g>
+        </svg>
+        <svg x="0" y="3">
+          <g fill="black">
+            <circle cx="1" cy="1" r="1" />
+            <rect x="1" y="0" width="10" height="2" />
+            <circle cx="11" cy="1" r="1" />
+          </g>
+        </svg>
+        <svg x="0" y="6">
+          <g fill="black">
+            <circle cx="1" cy="1" r="1" />
+            <rect x="1" y="0" width="10" height="2" />
+            <circle cx="11" cy="1" r="1" />
+          </g>
+        </svg>
+        <svg x="0" y="9">
+          <g fill="black">
+            <circle cx="1" cy="1" r="1" />
+            <rect x="1" y="0" width="10" height="2" />
+            <circle cx="11" cy="1" r="1" />
+          </g>
+        </svg>
+      </svg>
+      <circle cx="48" cy="185" r="3" style="fill:red;stroke:brown;stroke-width:1;" />
+
+      <rect x="48" y="225" width="50" height="30" style="fill:green;stroke:brown;stroke-width:1" />
+      <polygon id="padArriba" points="135,230 143,222 143,206 127,206 127,222"
+        style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" />
+      <polygon id="padDerecha" points="135,230 143,222 158,222 158,238 143,238"
+        style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" />
+      <polygon id="padAbajo" points="135,230 143,238 143,254 127,254 127,238"
+        style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" />
+      <polygon id="padIzquierda" points="135,230 127,238 111,238 111,222 127,222"
+        style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" />
+
+      <svg x="45" y="206">
+        <g style="fill:rgb(140, 10, 10);">
+          <circle cx="3" cy="3" r="3" />
+          <rect x="3" y="0" width="18" height="6" />
+          <circle cx="21" cy="3" r="3" />
+        </g>
+      </svg>
+      <svg x="77" y="206">
+        <g style="fill:rgb(12, 103, 183);">
+          <circle cx="3" cy="3" r="3" />
+          <rect x="3" y="0" width="18" height="6" />
+          <circle cx="21" cy="3" r="3" />
+        </g>
+      </svg>
+
+      <circle cx="25" cy="215" r="9" style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" />
+      <rect id="display" x="215" y="65" width="145" height="60" rx="5" ry="5" style="fill:rgb(32, 32, 32);"></rect>
+
+      <rect x="215" y="135" width="145" height="48" rx="5" ry="5" style="fill:rgb(12, 103, 183);"></rect>
+      <svg x="214.5" y="134.5">
+        <g style="fill:rgb(12, 103, 183);stroke:black;stroke-width:0.5">
+          <rect id="boton-0" x="1" y="1" width="28" height="23" rx="5" ry="5" />
+          <rect id="boton-1" x="30" y="1" width="28" height="23" rx="5" ry="5" />
+          <rect id="boton-2" x="59" y="1" width="28" height="23" rx="5" ry="5" />
+          <rect id="boton-3" x="88" y="1" width="28" height="23" rx="5" ry="5" />
+          <rect id="boton-4" x="117" y="1" width="28" height="23" rx="5" ry="5" />
+
+          <rect id="boton-5" x="1" y="25" width="28" height="23" rx="5" ry="5" />
+          <rect id="boton-6" x="30" y="25" width="28" height="23" rx="5" ry="5" />
+          <rect id="boton-7" x="59" y="25" width="28" height="23" rx="5" ry="5" />
+          <rect id="boton-8" x="88" y="25" width="28" height="23" rx="5" ry="5" />
+          <rect id="boton-9" x="117" y="25" width="28" height="23" rx="5" ry="5" />
+        </g>
+      </svg>
+
+      <rect x="215" y="200" width="58" height="24" rx="5" ry="5" style="fill:white;" />
+      <svg x="214.5" y="199.5">
+        <g style="fill:white;stroke:black;stroke-width:0.5">
+          <rect id="boton-0" x="1" y="1" width="28" height="23" rx="5" ry="5" />
+          <rect id="boton-1" x="30" y="1" width="28" height="23" rx="5" ry="5" />
+        </g>
+      </svg>
+
+
+      <svg x="295" y="190">
+        <g s style="fill:rgb(32, 32, 32);">
+          <circle cx="3" cy="3" r="3" />
+          <rect x="3" y="0" width="18" height="6" />
+          <circle cx="21" cy="3" r="3" />
+        </g>
+      </svg>
+      <svg x="327" y="190">
+        <g s style="fill:rgb(32, 32, 32);">
+          <circle cx="3" cy="3" r="3" />
+          <rect x="3" y="0" width="18" height="6" />
+          <circle cx="21" cy="3" r="3" />
+        </g>
+      </svg>
+
+      <circle cx="340" cy="225" r="9" style="fill:yellow;stroke:black;stroke-width:1" />
+
+      <rect x="215" y="242" width="64" height="20" rx="5" ry="5"
+        style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" />
+      <rect x="296" y="242" width="64" height="20" rx="5" ry="5"
+        style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" />
+
+
+
+
+    </svg>
+  </div>
   <script src="src/index.js"></script>
 </body>
 
