--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ background-attachment: fixed;
       <polygon points="25,75 25,170 50,195 155,195 155,75" style="fill:white;stroke:brown ;stroke-width:1;" />
       <circle cx="50" cy="170" r="24" stroke="white" stroke-width="1" fill="white" />
 
-      <rect x="44" y="94" width="92" height="82" style="fill:blue;stroke:black;stroke-width:2;fill-rule:evenodd;" />
-      <image x="45" y="95" width="90" height="80" xlink:href="#" />
+      <rect x="44" y="94" width="92" height="82" style="fill:rgb(12, 103, 183);stroke:black;stroke-width:2;" />
+      <image x="45" y="95" width="90" height="80" xlink:href="./img/pokebola.png" />
 
       <rect x="80" y="82" width="4" height="4" style="fill:brown;" />
       <rect x="100" y="82" width="4" height="4" style="fill:brown;" />
@@ -117,21 +117,47 @@ background-attachment: fixed;
           <rect id="boton-3" x="88" y="1" width="28" height="23" rx="5" ry="5" />
           <rect id="boton-4" x="117" y="1" width="28" height="23" rx="5" ry="5" />
 
+          <text x="10" y="19">0</text>
+          <text x="40" y="19">1</text>
+          <text x="69" y="19">2</text>
+          <text x="98" y="19">3</text>
+          <text x="127" y="19">4</text>
+
           <rect id="boton-5" x="1" y="25" width="28" height="23" rx="5" ry="5" />
           <rect id="boton-6" x="30" y="25" width="28" height="23" rx="5" ry="5" />
           <rect id="boton-7" x="59" y="25" width="28" height="23" rx="5" ry="5" />
           <rect id="boton-8" x="88" y="25" width="28" height="23" rx="5" ry="5" />
           <rect id="boton-9" x="117" y="25" width="28" height="23" rx="5" ry="5" />
+
+          <text x="10" y="42">5</text>
+          <text x="40" y="42">6</text>
+          <text x="69" y="42">7</text>
+          <text x="98" y="42">8</text>
+          <text x="127" y="42">9</text>
         </g>
       </svg>
 
       <rect x="215" y="200" width="58" height="24" rx="5" ry="5" style="fill:white;" />
       <svg x="214.5" y="199.5">
         <g style="fill:white;stroke:black;stroke-width:0.5">
-          <rect id="boton-0" x="1" y="1" width="28" height="23" rx="5" ry="5" />
-          <rect id="boton-1" x="30" y="1" width="28" height="23" rx="5" ry="5" />
+          <rect id="buscar" x="1" y="1" width="28" height="23" rx="5" ry="5" />
+
+          <rect id="explorar" x="30" y="1" width="28" height="23" rx="5" ry="5" />
         </g>
       </svg>
+
+      <svg x="219" y="203" class="svg-icon">
+        <path
+          d="M18.125,15.804l-4.038-4.037c0.675-1.079,1.012-2.308,1.01-3.534C15.089,4.62,12.199,1.75,8.584,1.75C4.815,1.75,1.982,4.726,2,8.286c0.021,3.577,2.908,6.549,6.578,6.549c1.241,0,2.417-0.347,3.44-0.985l4.032,4.026c0.167,0.166,0.43,0.166,0.596,0l1.479-1.478C18.292,16.234,18.292,15.968,18.125,15.804 M8.578,13.99c-3.198,0-5.716-2.593-5.733-5.71c-0.017-3.084,2.438-5.686,5.74-5.686c3.197,0,5.625,2.493,5.64,5.624C14.242,11.548,11.621,13.99,8.578,13.99 M16.349,16.981l-3.637-3.635c0.131-0.11,0.721-0.695,0.876-0.884l3.642,3.639L16.349,16.981z">
+        </path>
+      </svg>
+
+      <svg x="249" y="203" class="svg-icon">
+        <path
+          d="M18.092,5.137l-3.977-1.466h-0.006c0.084,0.042-0.123-0.08-0.283,0H13.82L10,5.079L6.178,3.671H6.172c0.076,0.038-0.114-0.076-0.285,0H5.884L1.908,5.137c-0.151,0.062-0.25,0.207-0.25,0.369v10.451c0,0.691,0.879,0.244,0.545,0.369l3.829-1.406l3.821,1.406c0.186,0.062,0.385-0.029,0.294,0l3.822-1.406l3.83,1.406c0.26,0.1,0.543-0.08,0.543-0.369V5.506C18.342,5.344,18.242,5.199,18.092,5.137 M5.633,14.221l-3.181,1.15V5.776l3.181-1.15V14.221z M9.602,15.371l-3.173-1.15V4.626l3.173,1.15V15.371z M13.57,14.221l-3.173,1.15V5.776l3.173-1.15V14.221z M17.547,15.371l-3.182-1.15V4.626l3.182,1.15V15.371z">
+        </path>
+      </svg>
+
 
 
       <svg x="295" y="190">
@@ -160,6 +186,7 @@ background-attachment: fixed;
 
 
     </svg>
+    <input type="text" placeholder="Busca tu pokemon favorito por nombre o ID" class="w-80" />
   </div>
   <script src="src/index.js"></script>
 </body>
