comienza la magia

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ background-attachment: fixed;
       <circle cx="50" cy="170" r="24" stroke="white" stroke-width="1" fill="white" />
 
       <rect x="44" y="94" width="92" height="82" style="fill:rgb(12, 103, 183);stroke:black;stroke-width:2;" />
-      <image x="45" y="95" width="90" height="80" xlink:href="./img/pokebola.png" />
+      <image id="imagen" x="45" y="95" width="90" height="80" href="./img/pokebola.png" />
 
       <rect x="80" y="82" width="4" height="4" style="fill:brown;" />
       <rect x="100" y="82" width="4" height="4" style="fill:brown;" />
@@ -81,6 +81,7 @@ background-attachment: fixed;
       <circle cx="48" cy="185" r="3" style="fill:red;stroke:brown;stroke-width:1;" />
 
       <rect x="48" y="225" width="50" height="30" style="fill:green;stroke:brown;stroke-width:1" />
+      <text id="numero" x="50" y="245" style="fill:rgb(32, 32, 32);"></text>
       <polygon id="padArriba" points="135,230 143,222 143,206 127,206 127,222"
         style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" />
       <polygon id="padDerecha" points="135,230 143,222 158,222 158,238 143,238"
@@ -140,9 +141,9 @@ background-attachment: fixed;
       <rect x="215" y="200" width="58" height="24" rx="5" ry="5" style="fill:white;" />
       <svg x="214.5" y="199.5">
         <g style="fill:white;stroke:black;stroke-width:0.5">
-          <rect id="buscar" x="1" y="1" width="28" height="23" rx="5" ry="5" />
+          <rect id="buscar" x="1" y="1" width="28" height="23" rx="5" ry="5" onclick="alert('placeholder')" />
 
-          <rect id="explorar" x="30" y="1" width="28" height="23" rx="5" ry="5" />
+          <rect id=" explorar" x="30" y="1" width="28" height="23" rx="5" ry="5" />
         </g>
       </svg>
 
