--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@ background-attachment: fixed;
       <rect x="48" y="225" width="50" height="30" style="fill:green;stroke:brown;stroke-width:1" />
       <text id="numero" x="50" y="245" style="fill:rgb(32, 32, 32);"></text>
       <polygon id="padArriba" points="135,230 143,222 143,206 127,206 127,222"
-        style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" />
+        style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" onclick="alert('placeholder')" />
       <polygon id="padDerecha" points="135,230 143,222 158,222 158,238 143,238"
-        style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" />
+        style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" onclick="alert('placeholder')" />
       <polygon id="padAbajo" points="135,230 143,238 143,254 127,254 127,238"
-        style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" />
+        style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" onclick="alert('placeholder')" />
       <polygon id="padIzquierda" points="135,230 127,238 111,238 111,222 127,222"
-        style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" />
+        style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" onclick="alert('placeholder')" />
 
       <svg x="45" y="206">
         <g style="fill:rgb(140, 10, 10);">
@@ -143,7 +143,7 @@ background-attachment: fixed;
         <g style="fill:white;stroke:black;stroke-width:0.5">
           <rect id="buscar" x="1" y="1" width="28" height="23" rx="5" ry="5" onclick="alert('placeholder')" />
 
-          <rect id=" explorar" x="30" y="1" width="28" height="23" rx="5" ry="5" />
+          <rect id="explorar" x="30" y="1" width="28" height="23" rx="5" ry="5" onclick="alert('placeholder')" />
         </g>
       </svg>
 
