--- a/index.html
+++ b/index.html
@@ -78,7 +78,12 @@ background-attachment: fixed;
           </g>
         </svg>
       </svg>
+
+
+
       <circle cx="48" cy="185" r="3" style="fill:red;stroke:brown;stroke-width:1;" />
+
+
 
       <rect x="48" y="225" width="50" height="30" style="fill:green;stroke:brown;stroke-width:1" />
       <text id="numero" x="50" y="245" style="fill:rgb(32, 32, 32);"></text>
@@ -90,6 +95,8 @@ background-attachment: fixed;
         style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" onclick="alert('placeholder')" />
       <polygon id="padIzquierda" points="135,230 127,238 111,238 111,222 127,222"
         style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" onclick="alert('placeholder')" />
+
+
 
       <svg x="45" y="206">
         <g style="fill:rgb(140, 10, 10);">
@@ -106,7 +113,19 @@ background-attachment: fixed;
         </g>
       </svg>
 
-      <circle cx="25" cy="215" r="9" style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" />
+
+      <g id="reinicio" onclick="alert('placeholder')">
+        <circle cx="25" cy="215" r="9" style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" />
+        <svg x="15" y="205" class="svg-icon" viewBox="306 -6 30 450">
+          <path d=" M13.53,2.238c-0.389-0.164-0.844,0.017-1.01,0.41c-0.166,0.391,0.018,0.845,0.411,1.01
+        c2.792,1.181,4.598,3.904,4.6,6.937c0,4.152-3.378,7.529-7.53,7.529c-4.151,0-7.529-3.377-7.529-7.529
+        C2.469,7.591,4.251,4.878,7.01,3.683C7.401,3.515,7.58,3.06,7.412,2.67c-0.17-0.392-0.624-0.571-1.014-0.402
+        c-3.325,1.44-5.472,4.708-5.47,8.327c0,5.002,4.069,9.071,9.071,9.071c5.003,0,9.073-4.07,9.073-9.071
+        C19.07,6.939,16.895,3.659,13.53,2.238z"></path>
+          <path d="M9.999,7.616c0.426,0,0.771-0.345,0.771-0.771v-5.74c0-0.426-0.345-0.771-0.771-0.771
+          c-0.427,0-0.771,0.345-0.771,0.771v5.74C9.228,7.271,9.573,7.616,9.999,7.616z"></path>
+        </svg>
+      </g>
       <rect id="display" x="215" y="65" width="145" height="60" rx="5" ry="5" style="fill:rgb(32, 32, 32);"></rect>
 
       <rect x="215" y="135" width="145" height="48" rx="5" ry="5" style="fill:rgb(12, 103, 183);"></rect>
@@ -118,11 +137,11 @@ background-attachment: fixed;
           <rect id="boton-3" x="88" y="1" width="28" height="23" rx="5" ry="5" />
           <rect id="boton-4" x="117" y="1" width="28" height="23" rx="5" ry="5" />
 
-          <text x="10" y="19">0</text>
-          <text x="40" y="19">1</text>
-          <text x="69" y="19">2</text>
-          <text x="98" y="19">3</text>
-          <text x="127" y="19">4</text>
+          <text x="10" y="19" onclick="alert('placeholder')">A</text>
+          <text x="40" y="19" onclick="alert('placeholder')">B</text>
+          <text x="69" y="19" onclick="alert('placeholder')">C</text>
+          <text x="98" y="19" onclick="alert('placeholder')">D</text>
+          <text x="127" y="19" onclick="alert('placeholder')">E</text>
 
           <rect id="boton-5" x="1" y="25" width="28" height="23" rx="5" ry="5" />
           <rect id="boton-6" x="30" y="25" width="28" height="23" rx="5" ry="5" />
@@ -130,11 +149,11 @@ background-attachment: fixed;
           <rect id="boton-8" x="88" y="25" width="28" height="23" rx="5" ry="5" />
           <rect id="boton-9" x="117" y="25" width="28" height="23" rx="5" ry="5" />
 
-          <text x="10" y="42">5</text>
-          <text x="40" y="42">6</text>
-          <text x="69" y="42">7</text>
-          <text x="98" y="42">8</text>
-          <text x="127" y="42">9</text>
+          <text x="10" y="42" onclick="alert('placeholder')">F</text>
+          <text x="40" y="42" onclick="alert('placeholder')">G</text>
+          <text x="69" y="42" onclick="alert('placeholder')">H</text>
+          <text x="98" y="42" onclick="alert('placeholder')">I</text>
+          <text x="127" y="42" onclick="alert('placeholder')">J</text>
         </g>
       </svg>
 
@@ -145,6 +164,9 @@ background-attachment: fixed;
           <rect id="explorar" x="30" y="1" width="28" height="23" rx="5" ry="5" onclick="alert('placeholder')" />
         </g>
       </svg>
+
+
+
 
       <svg x="219" y="203" class="svg-icon">
         <path
