acomoda clicks de letras

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@ background-attachment: fixed;
 
       <rect x="48" y="225" width="50" height="30" style="fill:green;stroke:brown;stroke-width:1" />
       <text id="numero" x="50" y="245" style="fill:rgb(32, 32, 32);"></text>
+
+
+
       <polygon id="padArriba" points="135,230 143,222 143,206 127,206 127,222" class="fill-gray-900 hover:fill-gray-600"
         style="stroke:black;stroke-width:1" onclick="alert('placeholder')" />
       <polygon id="padDerecha" points="135,230 143,222 158,222 158,238 143,238"
@@ -131,29 +134,56 @@ background-attachment: fixed;
       <rect x="215" y="135" width="145" height="48" rx="5" ry="5" style="fill:rgb(12, 103, 183);"></rect>
       <svg x="214.5" y="134.5">
         <g style="fill:rgb(12, 103, 183);stroke:black;stroke-width:0.5">
-          <rect id="boton-0" x="1" y="1" width="28" height="23" rx="5" ry="5" />
-          <rect id="boton-1" x="30" y="1" width="28" height="23" rx="5" ry="5" />
-          <rect id="boton-2" x="59" y="1" width="28" height="23" rx="5" ry="5" />
-          <rect id="boton-3" x="88" y="1" width="28" height="23" rx="5" ry="5" />
-          <rect id="boton-4" x="117" y="1" width="28" height="23" rx="5" ry="5" />
+          <g id="boton-0" onclick="alert('placeholder')">
+            <rect x="1" y="1" width="28" height="23" rx="5" ry="5" />
+            <text x="10" y="19">A</text>
+          </g>
+          <g id="boton-1" onclick="alert('placeholder')">
+            <rect x="30" y="1" width="28" height="23" rx="5" ry="5" />
+            <text x="40" y="19">B</text>
+          </g>
+          <g id="boton-2" onclick="alert('placeholder')">
+            <rect x="59" y="1" width="28" height="23" rx="5" ry="5" />
+            <text x="69" y="19">C</text>
+          </g>
+          <g id="boton-3" onclick="alert('placeholder')">
+            <rect x="88" y="1" width="28" height="23" rx="5" ry="5" />
+            <text x="98" y="19">D</text>
+          </g>
+          <g id="boton-4" onclick="alert('placeholder')">
+            <rect x="117" y="1" width="28" height="23" rx="5" ry="5" />
+            <text x="127" y="19">E</text>
+          </g>
+          <g id="boton-5" onclick="alert('placeholder')">
+            <rect x="1" y="25" width="28" height="23" rx="5" ry="5" />
+            <text x="10" y="42">F</text>
+          </g>
+          <g id="boton-6" onclick="alert('placeholder')">
+            <rect x="30" y="25" width="28" height="23" rx="5" ry="5" />
+            <text x="40" y="42">G</text>
+          </g>
+          <g id="boton-7" onclick="alert('placeholder')">
+            <rect x="59" y="25" width="28" height="23" rx="5" ry="5" />
+            <text x="69" y="42">H</text>
+          </g>
+          <g id="boton-8" onclick="alert('placeholder')">
+            <rect x="88" y="25" width="28" height="23" rx="5" ry="5" />
+            <text x="98" y="42">I</text>
+          </g>
+          <g id="boton-9" onclick="alert('placeholder')">
+            <rect x="117" y="25" width="28" height="23" rx="5" ry="5" />
+            <text x="127" y="42">J</text>
+          </g>
 
-          <text x="10" y="19" onclick="alert('placeholder')">A</text>
-          <text x="40" y="19" onclick="alert('placeholder')">B</text>
-          <text x="69" y="19" onclick="alert('placeholder')">C</text>
-          <text x="98" y="19" onclick="alert('placeholder')">D</text>
-          <text x="127" y="19" onclick="alert('placeholder')">E</text>
 
-          <rect id="boton-5" x="1" y="25" width="28" height="23" rx="5" ry="5" />
-          <rect id="boton-6" x="30" y="25" width="28" height="23" rx="5" ry="5" />
-          <rect id="boton-7" x="59" y="25" width="28" height="23" rx="5" ry="5" />
-          <rect id="boton-8" x="88" y="25" width="28" height="23" rx="5" ry="5" />
-          <rect id="boton-9" x="117" y="25" width="28" height="23" rx="5" ry="5" />
 
-          <text x="10" y="42" onclick="alert('placeholder')">F</text>
-          <text x="40" y="42" onclick="alert('placeholder')">G</text>
-          <text x="69" y="42" onclick="alert('placeholder')">H</text>
-          <text x="98" y="42" onclick="alert('placeholder')">I</text>
-          <text x="127" y="42" onclick="alert('placeholder')">J</text>
+
+
+
+
+
+
+
         </g>
       </svg>
 
