--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ background-attachment: fixed;
 
       <g id="reinicio" onclick="alert('placeholder')">
         <circle cx="25" cy="215" r="9" style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" />
-        <svg x="15" y="205" class="svg-icon" viewBox="306 -6 30 450">
+        <svg x="15" y="205" class="svg-icon" viewBox="100.5 -3 100 450" fill="white">
           <path d=" M13.53,2.238c-0.389-0.164-0.844,0.017-1.01,0.41c-0.166,0.391,0.018,0.845,0.411,1.01
         c2.792,1.181,4.598,3.904,4.6,6.937c0,4.152-3.378,7.529-7.53,7.529c-4.151,0-7.529-3.377-7.529-7.529
         C2.469,7.591,4.251,4.878,7.01,3.683C7.401,3.515,7.58,3.06,7.412,2.67c-0.17-0.392-0.624-0.571-1.014-0.402
@@ -143,43 +143,43 @@ background-attachment: fixed;
       <rect x="215" y="135" width="145" height="48" rx="5" ry="5" style="fill:rgb(12, 103, 183);"></rect>
       <svg x="214.5" y="134.5">
         <g style="fill:rgb(12, 103, 183);stroke:black;stroke-width:0.5">
-          <g id="boton-0" onclick="alert('placeholder')">
+          <g id="boton-0" class="boton-pokemon" onclick="alert('placeholder')">
             <rect x="1" y="1" width="28" height="23" rx="5" ry="5" />
             <text x="10" y="19">A</text>
           </g>
-          <g id="boton-1" onclick="alert('placeholder')">
+          <g id="boton-1" class="boton-pokemon" onclick="alert('placeholder')">
             <rect x="30" y="1" width="28" height="23" rx="5" ry="5" />
             <text x="40" y="19">B</text>
           </g>
-          <g id="boton-2" onclick="alert('placeholder')">
+          <g id="boton-2" class="boton-pokemon" onclick="alert('placeholder')">
             <rect x="59" y="1" width="28" height="23" rx="5" ry="5" />
             <text x="69" y="19">C</text>
           </g>
-          <g id="boton-3" onclick="alert('placeholder')">
+          <g id="boton-3" class="boton-pokemon" onclick="alert('placeholder')">
             <rect x="88" y="1" width="28" height="23" rx="5" ry="5" />
             <text x="98" y="19">D</text>
           </g>
-          <g id="boton-4" onclick="alert('placeholder')">
+          <g id="boton-4" class="boton-pokemon" onclick="alert('placeholder')">
             <rect x="117" y="1" width="28" height="23" rx="5" ry="5" />
             <text x="127" y="19">E</text>
           </g>
-          <g id="boton-5" onclick="alert('placeholder')">
+          <g id="boton-5" class="boton-pokemon" onclick="alert('placeholder')">
             <rect x="1" y="25" width="28" height="23" rx="5" ry="5" />
             <text x="10" y="42">F</text>
           </g>
-          <g id="boton-6" onclick="alert('placeholder')">
+          <g id="boton-6" class="boton-pokemon" onclick="alert('placeholder')">
             <rect x="30" y="25" width="28" height="23" rx="5" ry="5" />
             <text x="40" y="42">G</text>
           </g>
-          <g id="boton-7" onclick="alert('placeholder')">
+          <g id="boton-7" class="boton-pokemon" onclick="alert('placeholder')">
             <rect x="59" y="25" width="28" height="23" rx="5" ry="5" />
             <text x="69" y="42">H</text>
           </g>
-          <g id="boton-8" onclick="alert('placeholder')">
+          <g id="boton-8" class="boton-pokemon" onclick="alert('placeholder')">
             <rect x="88" y="25" width="28" height="23" rx="5" ry="5" />
             <text x="98" y="42">I</text>
           </g>
-          <g id="boton-9" onclick="alert('placeholder')">
+          <g id="boton-9" class="boton-pokemon" onclick="alert('placeholder')">
             <rect x="117" y="25" width="28" height="23" rx="5" ry="5" />
             <text x="127" y="42">J</text>
           </g>
@@ -188,20 +188,19 @@ background-attachment: fixed;
 
       <rect x="215" y="200" width="58" height="24" rx="5" ry="5" style="fill:white;" />
       <svg x="214.5" y="199.5">
-        <g id="buscar" onclick="alert('placeholder')">
+        <g id="explorar-menos" onclick="alert('placeholder')">
           <rect x="1" y="1" width="28" height="23" rx="5" ry="5" style="fill:white;stroke:black;stroke-width:0.5" />
           <svg x="5" y="3" class="svg-icon">
             <path
-              d="M18.125,15.804l-4.038-4.037c0.675-1.079,1.012-2.308,1.01-3.534C15.089,4.62,12.199,1.75,8.584,1.75C4.815,1.75,1.982,4.726,2,8.286c0.021,3.577,2.908,6.549,6.578,6.549c1.241,0,2.417-0.347,3.44-0.985l4.032,4.026c0.167,0.166,0.43,0.166,0.596,0l1.479-1.478C18.292,16.234,18.292,15.968,18.125,15.804 M8.578,13.99c-3.198,0-5.716-2.593-5.733-5.71c-0.017-3.084,2.438-5.686,5.74-5.686c3.197,0,5.625,2.493,5.64,5.624C14.242,11.548,11.621,13.99,8.578,13.99 M16.349,16.981l-3.637-3.635c0.131-0.11,0.721-0.695,0.876-0.884l3.642,3.639L16.349,16.981z">
+              d="M11.739,13.962c-0.087,0.086-0.199,0.131-0.312,0.131c-0.112,0-0.226-0.045-0.312-0.131l-3.738-3.736c-0.173-0.173-0.173-0.454,0-0.626l3.559-3.562c0.173-0.175,0.454-0.173,0.626,0c0.173,0.172,0.173,0.451,0,0.624l-3.248,3.25l3.425,3.426C11.911,13.511,11.911,13.789,11.739,13.962 M18.406,10c0,4.644-3.763,8.406-8.406,8.406S1.594,14.644,1.594,10S5.356,1.594,10,1.594S18.406,5.356,18.406,10 M17.521,10c0-4.148-3.373-7.521-7.521-7.521c-4.148,0-7.521,3.374-7.521,7.521c0,4.148,3.374,7.521,7.521,7.521C14.147,17.521,17.521,14.148,17.521,10">
             </path>
           </svg>
-
         </g>
-        <g id="explorar" onclick="alert('placeholder')">
+        <g id="explorar-mas" onclick="alert('placeholder')">
           <rect x="30" y="1" width="28" height="23" rx="5" ry="5" style="fill:white;stroke:black;stroke-width:0.5" />
           <svg x="34" y="3" class="svg-icon">
             <path
-              d="M18.092,5.137l-3.977-1.466h-0.006c0.084,0.042-0.123-0.08-0.283,0H13.82L10,5.079L6.178,3.671H6.172c0.076,0.038-0.114-0.076-0.285,0H5.884L1.908,5.137c-0.151,0.062-0.25,0.207-0.25,0.369v10.451c0,0.691,0.879,0.244,0.545,0.369l3.829-1.406l3.821,1.406c0.186,0.062,0.385-0.029,0.294,0l3.822-1.406l3.83,1.406c0.26,0.1,0.543-0.08,0.543-0.369V5.506C18.342,5.344,18.242,5.199,18.092,5.137 M5.633,14.221l-3.181,1.15V5.776l3.181-1.15V14.221z M9.602,15.371l-3.173-1.15V4.626l3.173,1.15V15.371z M13.57,14.221l-3.173,1.15V5.776l3.173-1.15V14.221z M17.547,15.371l-3.182-1.15V4.626l3.182,1.15V15.371z">
+              d="M12.522,10.4l-3.559,3.562c-0.172,0.173-0.451,0.176-0.625,0c-0.173-0.173-0.173-0.451,0-0.624l3.248-3.25L8.161,6.662c-0.173-0.173-0.173-0.452,0-0.624c0.172-0.175,0.451-0.175,0.624,0l3.738,3.736C12.695,9.947,12.695,10.228,12.522,10.4 M18.406,10c0,4.644-3.764,8.406-8.406,8.406c-4.644,0-8.406-3.763-8.406-8.406S5.356,1.594,10,1.594C14.643,1.594,18.406,5.356,18.406,10M17.521,10c0-4.148-3.374-7.521-7.521-7.521c-4.148,0-7.521,3.374-7.521,7.521c0,4.147,3.374,7.521,7.521,7.521C14.147,17.521,17.521,14.147,17.521,10">
             </path>
           </svg>
         </g>
@@ -226,7 +225,14 @@ background-attachment: fixed;
         </g>
       </svg>
 
-      <circle cx="340" cy="225" r="9" style="fill:yellow;stroke:black;stroke-width:1" />
+      <g id="buscar" onclick="alert('placeholder')">
+        <circle cx="340" cy="225" r="11" style="fill:yellow;stroke:black;stroke-width:1" />
+        <svg x="330" y="215" class="svg-icon">
+          <path
+            d="M18.125,15.804l-4.038-4.037c0.675-1.079,1.012-2.308,1.01-3.534C15.089,4.62,12.199,1.75,8.584,1.75C4.815,1.75,1.982,4.726,2,8.286c0.021,3.577,2.908,6.549,6.578,6.549c1.241,0,2.417-0.347,3.44-0.985l4.032,4.026c0.167,0.166,0.43,0.166,0.596,0l1.479-1.478C18.292,16.234,18.292,15.968,18.125,15.804 M8.578,13.99c-3.198,0-5.716-2.593-5.733-5.71c-0.017-3.084,2.438-5.686,5.74-5.686c3.197,0,5.625,2.493,5.64,5.624C14.242,11.548,11.621,13.99,8.578,13.99 M16.349,16.981l-3.637-3.635c0.131-0.11,0.721-0.695,0.876-0.884l3.642,3.639L16.349,16.981z">
+          </path>
+        </svg>
+      </g>
 
       <rect x="215" y="242" width="64" height="20" rx="5" ry="5"
         style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" />
