--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ background-repeat: no-repeat;
 background-attachment: fixed;
   background-size: 100% 100%;">
   <div class="grid place-items-center h-screen">
-    <svg height="500" width="650" class="object-top select-none" viewBox="80 -10 220 320">
+    <svg height="500" width="650" class="object-top select-none shadow-[-35px_35px_10px_rgba(0,0,0,0.25)]"
+      viewBox="37 -13.5 300 289">
 
       <g id="body" class="fill-red-700 stroke-red-900">
         <polygon points="0,0 0,50 85,50 115,25 200,25 200,0" style="fill:red" />
@@ -110,7 +111,7 @@ background-attachment: fixed;
 
       <g id="reinicio" onclick="alert('placeholder')">
         <circle cx="25" cy="215" r="9" class="fill-stone-800 hover:fill-stone-600 stroke-black" />
-        <svg x="15" y="205" class="svg-icon" viewBox="100.5 -3 100 450" fill="white">
+        <svg x="15" y="205" class="svg-icon" viewBox="178 -5 100 450" fill="white">
           <path d=" M13.53,2.238c-0.389-0.164-0.844,0.017-1.01,0.41c-0.166,0.391,0.018,0.845,0.411,1.01
         c2.792,1.181,4.598,3.904,4.6,6.937c0,4.152-3.378,7.529-7.53,7.529c-4.151,0-7.529-3.377-7.529-7.529
         C2.469,7.591,4.251,4.878,7.01,3.683C7.401,3.515,7.58,3.06,7.412,2.67c-0.17-0.392-0.624-0.571-1.014-0.402
@@ -130,51 +131,49 @@ background-attachment: fixed;
       <svg x="290" y="65" width="70" height="90" viewBox="0 0 90 110">
         <text id="display-2" x="0" y="10" style="fill:white;" class="text-xs"></text>
       </svg>
-
-
       <g>
         <rect x="215" y="135" width="145" height="48" rx="5" ry="5" class="fill-sky-600"></rect>
         <svg x="214.5" y="134.5">
-          <g class="fill-sky-600  stroke-black">
+          <g class="fill-sky-600  stroke-black text-xs">
             <g id="boton-0" class="boton-pokemon hover:fill-sky-500" onclick="alert('placeholder')">
               <rect x="1" y="1" width="28" height="23" rx="5" ry="5" />
-              <text x="10" y="19">A</text>
+              <text x="10" y="19">_1</text>
             </g>
             <g id="boton-1" class="boton-pokemon hover:fill-sky-500" onclick="alert('placeholder')">
               <rect x="30" y="1" width="28" height="23" rx="5" ry="5" />
-              <text x="40" y="19">B</text>
+              <text x="40" y="19">_2</text>
             </g>
             <g id="boton-2" class="boton-pokemon hover:fill-sky-500" onclick="alert('placeholder')">
               <rect x="59" y="1" width="28" height="23" rx="5" ry="5" />
-              <text x="69" y="19">C</text>
+              <text x="69" y="19">_3</text>
             </g>
             <g id="boton-3" class="boton-pokemon hover:fill-sky-500" onclick="alert('placeholder')">
               <rect x="88" y="1" width="28" height="23" rx="5" ry="5" />
-              <text x="98" y="19">D</text>
+              <text x="98" y="19">_4</text>
             </g>
             <g id="boton-4" class="boton-pokemon hover:fill-sky-500" onclick="alert('placeholder')">
               <rect x="117" y="1" width="28" height="23" rx="5" ry="5" />
-              <text x="127" y="19">E</text>
+              <text x="127" y="19">_5</text>
             </g>
             <g id="boton-5" class="boton-pokemon hover:fill-sky-500" onclick="alert('placeholder')">
               <rect x="1" y="25" width="28" height="23" rx="5" ry="5" />
-              <text x="10" y="42">F</text>
+              <text x="10" y="42">_6</text>
             </g>
             <g id="boton-6" class="boton-pokemon hover:fill-sky-500" onclick="alert('placeholder')">
               <rect x="30" y="25" width="28" height="23" rx="5" ry="5" />
-              <text x="40" y="42">G</text>
+              <text x="40" y="42">_7</text>
             </g>
             <g id="boton-7" class="boton-pokemon hover:fill-sky-500" onclick="alert('placeholder')">
               <rect x="59" y="25" width="28" height="23" rx="5" ry="5" />
-              <text x="69" y="42">H</text>
+              <text x="69" y="42">_8</text>
             </g>
             <g id="boton-8" class="boton-pokemon hover:fill-sky-500" onclick="alert('placeholder')">
               <rect x="88" y="25" width="28" height="23" rx="5" ry="5" />
-              <text x="98" y="42">I</text>
+              <text x="98" y="42">_9</text>
             </g>
             <g id="boton-9" class="boton-pokemon hover:fill-sky-500" onclick="alert('placeholder')">
               <rect x="117" y="25" width="28" height="23" rx="5" ry="5" />
-              <text x="127" y="42">J</text>
+              <text x="127" y="42">_0</text>
             </g>
           </g>
         </svg>
@@ -220,8 +219,9 @@ background-attachment: fixed;
       </svg>
 
       <g id="buscar" onclick="alert('placeholder')">
-        <circle cx="340" cy="225" r="11" style="fill:yellow;stroke:black;stroke-width:1" />
-        <svg x="330" y="215" class="svg-icon">
+        <circle cx="340" cy="225" r="11" style="stroke:black;stroke-width:1"
+          class="fill-yellow-500 hover:fill-yellow-300" />
+        <svg x="330" y="215" class="svg-icon" style="fill:black">
           <path
             d="M18.125,15.804l-4.038-4.037c0.675-1.079,1.012-2.308,1.01-3.534C15.089,4.62,12.199,1.75,8.584,1.75C4.815,1.75,1.982,4.726,2,8.286c0.021,3.577,2.908,6.549,6.578,6.549c1.241,0,2.417-0.347,3.44-0.985l4.032,4.026c0.167,0.166,0.43,0.166,0.596,0l1.479-1.478C18.292,16.234,18.292,15.968,18.125,15.804 M8.578,13.99c-3.198,0-5.716-2.593-5.733-5.71c-0.017-3.084,2.438-5.686,5.74-5.686c3.197,0,5.625,2.493,5.64,5.624C14.242,11.548,11.621,13.99,8.578,13.99 M16.349,16.981l-3.637-3.635c0.131-0.11,0.721-0.695,0.876-0.884l3.642,3.639L16.349,16.981z">
           </path>
@@ -234,7 +234,8 @@ background-attachment: fixed;
         style="fill:rgb(32, 32, 32);stroke:black;stroke-width:1" />
 
     </svg>
-    <input type="text" placeholder="Busca tu pokemon favorito por nombre o ID" class="w-80" />
+    <input type="text" placeholder="Busca tu pokemon favorito por nombre o ID"
+      class="w-80 shadow-[-10px_10px_10px_rgba(0,0,0,0.25)] rounded border-1" />
   </div>
   <script src="src/index.js"></script>
 </body>
