introduce los test e2e

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ background-repeat: no-repeat;
 background-attachment: fixed;
   background-size: 100% 100%;">
   <div class="grid place-items-center h-screen">
-    <svg height="500" width="650" class="object-top select-none shadow-[-35px_35px_10px_rgba(0,0,0,0.25)]"
+    <svg id="pokedex" height="500" width="650" class="object-top select-none shadow-[-35px_35px_10px_rgba(0,0,0,0.25)]"
       viewBox="37 -13.5 300 289">
 
       <g id="body" class="fill-red-700 stroke-red-900">
