--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ background-attachment: fixed;
     <input type="text" placeholder="Busca tu pokemon favorito por nombre o ID"
       class="w-80 shadow-[-10px_10px_10px_rgba(0,0,0,0.25)] rounded border-1" />
   </div>
-  <script src="/src/index.js" type="module"></script>
+  <script src="./src/index.js" type="module"></script>
 </body>
 
 </html>
