Finaliza implementacion por modulos

--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@ background-attachment: fixed;
       <text id="numero" x="50" y="245" style="fill:rgb(32, 32, 32);"></text>
       <g class="fill-stone-800  stroke-black">
         <polygon id="padArriba" class="hover:fill-stone-600" points="135,230 143,222 143,206 127,206 127,222"
-          onclick="alert('placeholder')" />
+          onclick="{}" />
         <polygon id="padDerecha" class="hover:fill-stone-600" points="135,230 143,222 158,222 158,238 143,238"
-          onclick="alert('placeholder')" />
+          onclick="{}" />
         <polygon id="padAbajo" class="hover:fill-stone-600" points="135,230 143,238 143,254 127,254 127,238"
-          onclick="alert('placeholder')" />
+          onclick="{}" />
         <polygon id="padIzquierda" class="hover:fill-stone-600" points="135,230 127,238 111,238 111,222 127,222"
-          onclick="alert('placeholder')" />
+          onclick="{}" />
       </g>
 
 
@@ -109,7 +109,7 @@ background-attachment: fixed;
       </svg>
 
 
-      <g id="reinicio" onclick="alert('placeholder')">
+      <g id="reinicio" onclick="{}">
         <circle cx="25" cy="215" r="9" class="fill-stone-800 hover:fill-stone-600 stroke-black" />
         <svg x="15" y="205" class="svg-icon" viewBox="178 -5 100 450" fill="white">
           <path d=" M13.53,2.238c-0.389-0.164-0.844,0.017-1.01,0.41c-0.166,0.391,0.018,0.845,0.411,1.01
@@ -135,43 +135,43 @@ background-attachment: fixed;
         <rect x="215" y="135" width="145" height="48" rx="5" ry="5" class="fill-sky-600"></rect>
         <svg x="214.5" y="134.5">
           <g class="fill-sky-600  stroke-black text-xs">
-            <g id="boton-0" class="boton-pokemon hover:fill-sky-500" onclick="alert('placeholder')">
+            <g id="boton-0" class="boton-pokemon hover:fill-sky-500" onclick="{}">
               <rect x="1" y="1" width="28" height="23" rx="5" ry="5" />
               <text x="10" y="19">_1</text>
             </g>
-            <g id="boton-1" class="boton-pokemon hover:fill-sky-500" onclick="alert('placeholder')">
+            <g id="boton-1" class="boton-pokemon hover:fill-sky-500" onclick="{}">
               <rect x="30" y="1" width="28" height="23" rx="5" ry="5" />
               <text x="40" y="19">_2</text>
             </g>
-            <g id="boton-2" class="boton-pokemon hover:fill-sky-500" onclick="alert('placeholder')">
+            <g id="boton-2" class="boton-pokemon hover:fill-sky-500" onclick="{}">
               <rect x="59" y="1" width="28" height="23" rx="5" ry="5" />
               <text x="69" y="19">_3</text>
             </g>
-            <g id="boton-3" class="boton-pokemon hover:fill-sky-500" onclick="alert('placeholder')">
+            <g id="boton-3" class="boton-pokemon hover:fill-sky-500" onclick="{}">
               <rect x="88" y="1" width="28" height="23" rx="5" ry="5" />
               <text x="98" y="19">_4</text>
             </g>
-            <g id="boton-4" class="boton-pokemon hover:fill-sky-500" onclick="alert('placeholder')">
+            <g id="boton-4" class="boton-pokemon hover:fill-sky-500" onclick="{}">
               <rect x="117" y="1" width="28" height="23" rx="5" ry="5" />
               <text x="127" y="19">_5</text>
             </g>
-            <g id="boton-5" class="boton-pokemon hover:fill-sky-500" onclick="alert('placeholder')">
+            <g id="boton-5" class="boton-pokemon hover:fill-sky-500" onclick="{}">
               <rect x="1" y="25" width="28" height="23" rx="5" ry="5" />
               <text x="10" y="42">_6</text>
             </g>
-            <g id="boton-6" class="boton-pokemon hover:fill-sky-500" onclick="alert('placeholder')">
+            <g id="boton-6" class="boton-pokemon hover:fill-sky-500" onclick="{}">
               <rect x="30" y="25" width="28" height="23" rx="5" ry="5" />
               <text x="40" y="42">_7</text>
             </g>
-            <g id="boton-7" class="boton-pokemon hover:fill-sky-500" onclick="alert('placeholder')">
+            <g id="boton-7" class="boton-pokemon hover:fill-sky-500" onclick="{}">
               <rect x="59" y="25" width="28" height="23" rx="5" ry="5" />
               <text x="69" y="42">_8</text>
             </g>
-            <g id="boton-8" class="boton-pokemon hover:fill-sky-500" onclick="alert('placeholder')">
+            <g id="boton-8" class="boton-pokemon hover:fill-sky-500" onclick="{}">
               <rect x="88" y="25" width="28" height="23" rx="5" ry="5" />
               <text x="98" y="42">_9</text>
             </g>
-            <g id="boton-9" class="boton-pokemon hover:fill-sky-500" onclick="alert('placeholder')">
+            <g id="boton-9" class="boton-pokemon hover:fill-sky-500" onclick="{}">
               <rect x="117" y="25" width="28" height="23" rx="5" ry="5" />
               <text x="127" y="42">_0</text>
             </g>
@@ -181,7 +181,7 @@ background-attachment: fixed;
       <g>
         <rect x="215" y="200" width="58" height="24" rx="5" ry="5" style="fill:white;" />
         <svg x="214.5" y="199.5">
-          <g id="explorar-menos" onclick="alert('placeholder')">
+          <g id="explorar-menos" onclick="{}">
             <rect x="1" y="1" width="28" height="23" rx="5" ry="5" class="fill-white stroke-black" />
             <svg x="5" y="3" class="svg-icon">
               <path
@@ -189,7 +189,7 @@ background-attachment: fixed;
               </path>
             </svg>
           </g>
-          <g id="explorar-mas" onclick="alert('placeholder')">
+          <g id="explorar-mas" onclick="{}">
             <rect x="30" y="1" width="28" height="23" rx="5" ry="5" class="fill-white stroke-black" />
             <svg x="34" y="3" class="svg-icon">
               <path
@@ -218,7 +218,7 @@ background-attachment: fixed;
         </g>
       </svg>
 
-      <g id="buscar" onclick="alert('placeholder')">
+      <g id="buscar" onclick="{}">
         <circle cx="340" cy="225" r="11" style="stroke:black;stroke-width:1"
           class="fill-yellow-500 hover:fill-yellow-300" />
         <svg x="330" y="215" class="svg-icon" style="fill:black">
@@ -237,7 +237,7 @@ background-attachment: fixed;
     <input type="text" placeholder="Busca tu pokemon favorito por nombre o ID"
       class="w-80 shadow-[-10px_10px_10px_rgba(0,0,0,0.25)] rounded border-1" />
   </div>
-  <script src="./src/index.js" type="module"></script>
+  <script src='src/index.js' type="module"></script>
 </body>
 
 </html>
