--- a/index.html
+++ b/index.html
@@ -236,6 +236,10 @@ background-attachment: fixed;
     </svg>
     <input type="text" placeholder="Busca tu pokemon favorito por nombre o ID"
       class="w-80 shadow-[-10px_10px_10px_rgba(0,0,0,0.25)] rounded border-1" />
+    <select id="select">
+      <option value="nombre" selected>Nombre</option>
+      <option value="id">ID</option>
+    </select>
   </div>
   <script src='src/index.js' type="module"></script>
 </body>
